# vision_and_wanda

./: LiveVidOD.py  Product_count_SIFT_ORB_methods.py  STAPP_YLV8.py  StAPP_matching.py  cluster_feature.py  countbox.py  counting_products.py  doc_scanner.py  edge.py  fun.py  main.py  multimodel.py  objectdetection.py  product_counting_CT.py  prompts  templatematch.py  templatematchcb.py  video_yolo_app.py  yolov5 VId app.py  yolov8 fun.py  yolov8app.py
video/: deepsort.py  persondetector.py
video/cctv-serveillience/backend/: .env  database.py  main.py  models.py  pyproject.toml
video/cctv-serveillience/demo/: demo.py  intrusion_log.txt
video/cctv-serveillience/demo/models/: facedet.py
video/cctv-serveillience/models/: facedet.py
video/cctv-serveillience/utils/: addface.py
